<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1"
android:background="#0C3B2E"
android:orientation="vertical"
android:padding="20dp"
android:visibility="visible"
android:weightSum="10"
    tools:context=".Welcome">

<ImageView
    android:id="@+id/imageView7"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    app:srcCompat="@drawable/boy_and_girl_giving_high_five_to_each_other" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_the"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="0"
        android:text="@string/doxfetch3"
        android:textAlignment="center"
        android:textColor="#FFBA00"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingTop="20dp"
        android:text="@string/para"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />
</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="horizontal"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:backgroundTint="#FFBA00"
        android:text="@string/register22"
        android:textColor="#000000"
        tools:ignore="NestedWeights" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:backgroundTint="#FFBA00"
        android:text="@string/login4"
        android:textColor="#000000" />
</LinearLayout>


</LinearLayout>
