<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4"
    android:background="#000000"
    android:backgroundTint="#0C3B2E"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible"
    android:weightSum="10"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="396dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/feeling_angry_cuate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@drawable/roundedcorner"
        android:backgroundTint="#6D9773"

        android:orientation="vertical">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:textColor="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8371706E"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8371706E"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nic_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#8371706E"
            android:ems="10"
            android:inputType="phone"
            android:shadowColor="#000000"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#FEC627"
                android:text="@string/confirm" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>