<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C3B2E"
    android:backgroundTint="#0C3B2E"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="10"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#6D9773"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#0C3B2E"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FAFAFA"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/login_cuate" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"

        android:background="#0C3B2E"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="60dp"
        android:visibility="visible"
        android:weightSum="1"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nic_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#0C3B2E"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:visibility="visible">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="#FFBA00"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/login3"
            android:textColor="#121313"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>