<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/te"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6D9573"
    android:backgroundTint="#6D9573"
    android:orientation="vertical"
    tools:context=".Home">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6D9573"
        android:fontFamily="sans-serif"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="#0C3B2E"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="703dp"
        android:layout_weight="3"
        android:background="#6D9673"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@drawable/rounded_bottom"
            android:backgroundTint="#0C3B2E"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="140dp"
                android:text="@string/oliver_kviene"
                android:textColor="#EAEAEA"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:paddingLeft="140dp"
                android:text="@string/id100"
                android:textColor="#EAEAEA"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="#8C3131"
                app:srcCompat="@android:drawable/ic_popup_reminder" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="#AF5151"
                android:text="@string/home" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="#8B3131"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:paddingBottom="60dp">

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FDB800"
                android:text="@string/birth_certificate"
                android:textColor="#070404" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FDB800"
                android:text="@string/national_identity_card"
                android:textColor="#070404" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FDB800"
                android:text="@string/passport"
                android:textColor="#070404" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_bottom">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="171dp"
                android:layout_height="121dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/progress_overview_pana" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="116dp"
                android:layout_height="74dp"
                android:text="40%"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFEFE"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:text="@string/progress2"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_weight="2"
            android:background="#6D9573"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#8C3131"
                app:srcCompat="@android:drawable/ic_popup_reminder" />

            <Button
                android:id="@+id/button56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#AF5151"
                android:text="@string/home" />

            <ImageButton
                android:id="@+id/imageButton57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#8B3131"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>