<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/te"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#6D9573"
android:backgroundTint="#6D9573"
android:orientation="vertical"
tools:context=".Form">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="703dp"
    android:layout_weight="3"
    android:background="#6D9673"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible"
    android:weightSum="10">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:fontFamily="sans-serif"
        android:text="FORM"
        android:textAlignment="center"
        android:textColor="#FCB700"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="122dp"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_bottom"
        android:backgroundTint="#0C3B2E"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView73"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="140dp"
            android:text="@string/name44"
            android:textColor="#EAEAEA"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView95"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:paddingStart="140dp"
            android:text="@string/id55"
            android:textColor="#EAEAEA"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="426dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:paddingRight="10dp"
        tools:ignore="NestedWeights">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="361dp"
            android:layout_height="400dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/_179468" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="3"
        android:background="#6D9573"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button61"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#8A3131"
            android:text="@string/home" />

    </LinearLayout>


</LinearLayout>

</LinearLayout>